Fix sidebar, cohort-review wrapper, persistent scrollbar

--- a/ui/src/app/cohort-review/detail-page/detail-page.css
+++ b/ui/src/app/cohort-review/detail-page/detail-page.css
@@ -1,7 +1,3 @@
-app-participant-detail {
-  position: relative;
-}
-
 .detail-sidebar {
   position: absolute;
   top: 0;
@@ -12,6 +8,7 @@ app-participant-detail {
   z-index: 1;
   background-color: rgb(250, 250, 250);
   display: flex;
+  margin-right: -0.6rem;
 }
 
 .sidebar-handle {
