--- a/ui/src/app/views/signed-in/component.css
+++ b/ui/src/app/views/signed-in/component.css
@@ -29,6 +29,7 @@
   padding-top: 1rem;
   padding-bottom: 0.5rem;
   background-color: white;
+  height: 4rem;
 }
 
 .nav-link:hover {
